2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp: Fix up formatting.
	* src/control.cpp: Fix up formatting. Fix report of # of .java
	files processed, bug 1818.

2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/option.h (OptionError):
	* src/platform.cpp (U8S_help_header): Fix compile issues with
	HP-UX aCC.

2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	Patch 211:
	* doc/jikes.1: Update the man page to reflect options changes.
	* src/jikesapi.h:
	* src/jikesapi.cpp:
	* src/option.h:
	* src/option.cpp (Option): Add -encoding option on builds without
	encoding, which prints an error message - bug 2242. Add various
	options synonyms - bug 339. Add -source, -target, and -J options,
	as well as making -g work like in javac - bug 273.
	* src/bytecode.cpp:
	* src/class.h (Write):
	* src/control.cpp:
	* src/definite.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/platform.cpp:
	* src/platform.h:
	* src/semantic.h: Update to use improved options.
	* src/jikes.cpp: Add --help and --version support. Print usage to
	stdout - bug 225.

2001-10-30  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeHeader): Fix infinite recursion with
	invalid local class, bug 2293 - patch 215.

2001-10-30  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (AddDefaultConstructor): Default constructor should
	have access modifier of enclosing class, bug 1889 - patch 214.

2001-10-27  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/definite.cpp: Change all uses of pair to def_pair, to avoid
	conflict with MS VC++ compiler mentioned in bug 2283 - patch 212.
	Also, reindent some code in #ifdef blocks.

2001-10-26  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/platform.cpp (SystemFopen, SystemMkdirhierForFile):
	* src/jikesapi.cpp (JikesAPI::stat): Fix namespace issues
	mentioned in bug 2250 - patch 210.

2001-10-25  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/java.g (SwitchBlock): Mark blocks inside a switch statement