@@ -1,3 +1,14 @@
+2001-11-01  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/option.h:
+	* src/option.cpp (ArgumentExpander): Update @file parsing to match
+	Sun's javac. Rearrange error reporting so that parse errors can be
+	easily detected.
+	* src/jikesapi.cpp (parseOptions):
+	* src/control.h (ProcessNewInputFiles):
+	* src/control.cpp (ProcessNewInputFiles): Update to account for
+	earlier error detection.
+
 2001-10-31  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/jikesapi.cpp: Fix up formatting.
@@ -41,7 +52,7 @@
 2001-10-30  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/decl.cpp (AddDefaultConstructor): Default constructor should
-	have access modifier of enclosing class, bug 1889 - patch 214.
+	have access modifier of enclosing class, bug 391 - patch 214.
 
 2001-10-27  Chris Dennis  <Chris.Dennis@invidi.com>
 
